# ACToR

./: .gitattributes  .gitignore  LICENSE  README.md  requirements.txt
__utils/_lproc/: .gitignore  CLAUDE.md  MANIFEST.in  README.md  converters.md  hlproc.py  lproc.py  lproc.yaml  pack.sh  proxies.md  pyproject.toml
__utils/_lproc/converters/: cc__stdout_r.py  un__stderr_r.py
__utils/_lproc/proxies/: _WRONG_codexx4.py  claudix-sandv2.py  claudix-sandv2.testnote.md  claudix2.py  claudix3.py  claudix4.py  claudix5.py  claudix6.py  claudix7.py
__utils/_sand/: README.md  pyproject.toml  sand.config  sand.py  sand1.config
__utils/docker/: build.sh  changes.sh  devuniv.Dockerfile  seccomp.json  shell.sh  start.sh  stop.sh
docs/: COMMANDS.md  FILE_STRUCTURE.md  INSTALLATION.md  MODULES.md  REPRODUCTION.md
evaluation_scripts/: benchmark_stats.json  collect_cost_CC.py  collect_cost_SWE.py  collect_time.py  draw_eval1.py  draw_eval2.py  draw_eval4.py  draw_eval6.py  eval1.py  eval2.py  eval3.py  eval4.py  eval5.py  eval6.py  prepare_single_seed.py  revert_back_seed.py
projects_input/csplit/: tests00.jsonl
projects_input/example/: Makefile  example.c  testcmp.sh  tests00.jsonl
projects_input/expr/: Makefile  expr.c  tests00.jsonl
projects_input/fmt/: Makefile  testcmp.sh  tests00.jsonl
projects_input/join/: Makefile  join.c  testcmp.sh  tests00.jsonl
projects_input/printf/: norm_rules.jsonl  printf.c  testcmp.sh  tests00.jsonl
projects_input/test/: Makefile  tests00.jsonl
projects_input_BSD/arch/: Makefile  arch.c  testcmp.sh  tests00.jsonl
projects_input_BSD/basename/: Makefile  basename.c  testcmp.sh  tests00.jsonl  util.c
projects_input_BSD/bsdvers/: Makefile  testcmp.sh  tests00.jsonl
projects_input_BSD/cat/: Makefile  cat.c  testcmp.sh  tests00.jsonl
projects_input_BSD/chmod/: Makefile  chmod.c  testcmp.sh  tests00.jsonl  util.c  util.h
projects_input_BSD/chroot/: Makefile  chroot.c  testcmp.sh  tests00.jsonl  util.h
projects_input_BSD/comm/: Makefile  testcmp.sh  tests00.jsonl
projects_input_BSD/cp/: Makefile  cp.c  testcmp.sh  tests00.jsonl  util.c  util.h  utils.c
projects_input_BSD/csplit/: Makefile  csplit.c  testcmp.sh  tests00.jsonl  util.c  util.h
projects_input_BSD/cut/: Makefile  cut.c  testcmp.sh  tests00.jsonl  util.c  util.h
projects_input_BSD/date/: Makefile  date.c  testcmp.sh  tests00.jsonl  util.c  util.h
projects_input_BSD/dd/: Makefile  dd.c  testcmp.sh  tests00.jsonl  util.c  util.h
projects_input_BSD/df/: Makefile  df.c  testcmp.sh  tests00.jsonl  util.c  util.h
projects_input_BSD/dirname/: Makefile  dirname.c  testcmp.sh  tests00.jsonl  util.c  util.h
projects_input_BSD/du/: Makefile  du.c  testcmp.sh  tests00.jsonl  util.c  util.h
projects_input_BSD/echo/: Makefile  testcmp.sh  tests00.jsonl
projects_input_BSD/env/: Makefile  env.c  testcmp.sh  tests00.jsonl  util.c  util.h
projects_input_BSD/expand/: Makefile  expand.c  testcmp.sh  tests00.jsonl  util.c  util.h
projects_input_BSD/expr/: Makefile  expr.c  testcmp.sh  tests00.jsonl  util.c  util.h
projects_input_BSD/factor/: Makefile  factor.c  testcmp.sh  tests00.jsonl  util.h
scripts/: ACToR.py  dangerous.json  default_config.json  macro_config.json  utils.py
(+313 files in other folders)
