[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lproc"
version = "1.0.0"
description = "Long-Process Manager - Manage long-running background processes with persistent I/O"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["process", "background", "pipeline", "stream", "log", "grep", "filter"]
authors = [
    {name = "lproc", email = "lproc@example.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "pyyaml>=6.0",
    "textual>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
lproc = "lproc:main"
hlproc = "hlproc:main"

[tool.setuptools]
py-modules = ["lproc", "hlproc"]

[tool.setuptools.package-data]
"*" = ["lptail"]

[tool.ruff]
target-version = "py38"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W605"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"