[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sand"
version = "1.0.0"
description = "Filesystem Sandbox with Bubblewrap - Run commands with read-only filesystem protection"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["sandbox", "bubblewrap", "filesystem", "security", "utils"]
authors = [
    {name = "sand", email = "sand@example.com"},
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
sand = "sand:main"

[tool.ruff]
target-version = "py37"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W605"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"